# Multimodal_Final_SceneWeaver

./: =0.5.14  DATASETS_PLAN.md  DATA_COLLECTION_QUICKSTART.md  DAYS1-4_COMPLETE_STATUS.md  DAYS23_SUMMARY.md  DAYS45_DATA_COLLECTION_GUIDE.md  EMAIL_PROGRESS_UPDATE.md  I2V_FINETUNE_README.md  LLM_MODEL  MULTIAGENT_IMPLEMENTATION_PLAN.md  MULTI_AGENT_README.md  README.md  RUN_COMMANDS.md  VAULT_MIGRATION.md  VOICE_PIPELINE_GUIDE.md  WEEK_SPRINT_PLAN.md  datasets_registry.json  evaluation.py  example_multi_agent.py  finetune_continuity.sh  models  models_registry.json  pipeline_runtime.py  pyproject.toml  requirements.txt  run_install_vbench.sh  run_on_cluster.sh  run_story_i2v_from_storyboard.sh  run_story_pipeline.sh  run_story_pipeline_dinov2_tracking.sh  run_story_pipeline_identity_layout.sh  run_story_pipeline_stateful.sh  run_story_pipeline_stateful_wan_i2v.sh  run_story_simple.sh  run_vbench_combined.sh  run_vbench_combined_array.sh  run_vbench_continuity.sh  run_videobench_local_server.sh  run_videobench_window_prompt.sh  running.sh  (+11 more)
Caption_Gen/: __init__.py  dense_expected_video_captioner.py  expected_video_captioner.py
Globa_Local_Emb_Feedback/: __init__.py  global_local_embedding_feedback.py  hf_plugin_bootstrap.py
HF_PLUGIN/: README.md  __init__.py  client.py  download_story_datasets.py
VIDEO_GENERATIVE_BACKBONE/: __init__.py  video_output_layout.py
audio_processor/: __init__.py  voice_script_extractor.py  voice_script_parser.py
batch_jobs/: a100_fox_grapes_core.sbatch  a100_hindu_dialogue_core.sbatch  a100_lion_mouse_core.sbatch  submit_all_a100.sh  (+19 more)
(+111 files in other folders)
